<resources>
    <string name="app_name">Telecaller</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="check_login_message">Checking Login…</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="book_xpert_co">Book Xpert</string>
    <string name="fair_soft_co">Fair Soft</string>

    <string name="no_internet">No Internet</string>
    <string name="go_to_network_settings">Go to Network Settings</string>

    <string name="server_error">Server Error</string>

    <string name="comp_0">Fair Soft Solutions</string>
    <string name="comp_1">Book Xpert</string>
    <string name="welcome_note">Hi!</string>
    <string name="sample_name">Rammohan</string>
    <string name="comma_symbol">,</string>

    <string name="log_out">Log Out</string>
    <string name="log_out_message">Are you sure you want to Log Out…?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="campaigns_status">Campaigns Status (<![CDATA[<font color="#4285F4">%1$d</font>]]>)</string>
    <string name="report_status">Report Status</string>
    <string name="not_connected_calls">Not-Connected Calls (<![CDATA[<font color="#EA4335">%1$d</font>]]>)</string>
    <string name="new_enquiry_amp_followups">New Enquiry &amp; Followups</string>
    <string name="tools_followup">Tools Followup</string>

    <string name="campaigns_list">Campaigns List</string>
    <string name="search_bar">Search…</string>
    <string name="campaign">Campaign:</string>
    <string name="total">Total</string>
    <string name="pending">Pending</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not-Connected</string>
    <string name="no_records_found">No records found…</string>

    <string name="company_name">Company Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="product_name">Product Name:</string>
    <string name="dealing_product">Dealing Product:</string>

    <string name="not_connected_calls_label">Not Connected Calls</string>
    <string name="reason">Reason:</string>
    <string name="remarks">Remarks:</string>

    <string name="contact_history">Contact History</string>
    <string name="contact_dialog_message">Do you want to continue…?</string>
    <string name="followup_by">FollowUp By:</string>
    <string name="date">Date:</string>
    <string name="no_history">No History…</string>

    <string name="select_sim">Select Sim</string>
    <string name="sim_1">SIM 1</string>
    <string name="sim_2">SIM 2</string>
    <string name="cancel">Cancel</string>

    <string name="last_call">Last Call:</string>
    <string name="con_calls">Connected Calls</string>
    <string name="not_con_calls">Not Connected Calls</string>

    <string name="to">To</string>
    <string name="from">From</string>
    <string name="get_data">Get Data</string>
    <string name="total_enquiries">Total Enquiries</string>
</resources>