<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp"
    app:cardBackgroundColor="@color/light_blue"
    app:strokeColor="@color/blue"
    app:strokeWidth="0.5dp"
    app:cardElevation="7dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/camp_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campaign"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/camp_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/campaign"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_regular"
            android:singleLine="true"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/camp_head"
            app:layout_constraintStart_toStartOf="@id/camp_head"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"/>

        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/camp_name"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/total_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/quicksand_regular"/>

                <TextView
                    android:id="@+id/total_calls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="500"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="90dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/connected_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connected"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/quicksand_regular"/>

                <TextView
                    android:id="@+id/con_calls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="500"
                    android:textSize="16sp"
                    android:textColor="@color/green"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/ll_1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/pend_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pending"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/quicksand_regular"/>

                <TextView
                    android:id="@+id/pend_calls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="500"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="65dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/not_connected_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_connected"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/quicksand_regular"/>

                <TextView
                    android:id="@+id/not_con_calls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="500"
                    android:textSize="16sp"
                    android:textColor="@color/red"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>